data/all_generated_tests/raw_wast_tests/br_table_UnreachableCodeExecution_2123.wast
;; 3. **Empty Label Vector**:    - Description: Use a `br_table` instruction with an empty vector of label indices and an `unreachable` default label.    - Constraint: To ensure that out-of-bounds operand cases (i.e., any operand since vector is empty) lead directly to the default label.    - Relation: Validates that the implementation defaults correctly and does not intermingle out-of-bounds behaviors, ending straight into `unreachable`.

(assert_invalid
  (module
    (func
      (block (br_table 0 (i32.const 0)))
    )
  )
  "type mismatch"
)